# BayesMAB

./: README.md  pyproject.toml
examples/: example.py  run_bernoulli_bandit.py
